# flashinfer

./: .gitignore  CMakeLists.txt  build_scikit.py  pyproject.toml  pyproject.toml.scikit.orig  qq
.devcontainer/: Dockerfile
cmake/: Dependencies.cmake  Options.cmake
cmake/utils/: ConfigureHIPArchitectures.cmake  ConfigureRocmPath.cmake  ConfigureTorchExtension.cmake  GenerateConfigPython.cmake
examples/cpp/standalone_single_prefill/: CMakeLists.txt  README.md  single_prefill_driver.cu
flashinfer/: CMakeLists.txt  __init__.py  _version.py  get_include_paths.py
flashinfer/csrc/: CMakeLists.txt  activation_hip.cu  flashinfer_ops_hip.cu  pytorch_extension_utils.h
flashinfer/jit/: __init__.py  env.py
libflashinfer/: CMakeLists.txt
libflashinfer/include/flashinfer/: fp16.h  norm.cuh  pos_enc.cuh
libflashinfer/include/flashinfer/attention/: prefill.cuh  variants.cuh
libflashinfer/include/flashinfer/hip/: math.hip.h  norm.hip.h  pos_enc.hip.h  utils.hip.h
libflashinfer/include/flashinfer/hip/attention/: cascade.hip.h  decode.hip.h  scheduler.hip.h
libflashinfer/include/kernel_launch_configurator/: configurator_iface.hpp  configurator_registry.hpp  nv_singleprefill_configurator.hpp
libflashinfer/tests/: CMakeLists.txt  ieee-from-fp32-value.cc  ieee-to-fp32-value.cc  tables.cc  tables.h  test_fp16.cpp
libflashinfer/tests/lauch_configurator/: configurator_test_fixture.hpp  test_arch_specific_launch_configurator.cpp  test_configurator_core.cpp  test_configurator_registry.cpp  test_configurator_support.cpp  test_occupancy_calculator.cpp
libflashinfer/utils/: fp16.h
templates/: __config__.py.in  aot_config.py.in
