[build-system]
requires = [
    "scikit-build-core>=0.4.3",
    "setuptools_scm>=8.0.0",
    "torch >= 2.4",
    "numpy",
    "cmake >=3.26.1",
    "ninja"
]
build-backend = "scikit_build_core.build"

[project]
name = "flashinfer"
dynamic = ["version"]
description = "Fast Attention Algorithms for LLM Inference"
requires-python = ">=3.8"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "FlashInfer Team"}
]
dependencies = [
    "torch>=2.4",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[tool.setuptools_scm]
write_to = "flashinfer/_version.py"
version_scheme = "post-release"
local_scheme = "no-local-version"
fallback_version = "0.0.0"

[tool.scikit-build]
build.verbose = true
logging.level = "INFO"
build-dir = "_skbuild"
experimental = true
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["flashinfer/_version.py"]

# Base CMake definitions - applied to all builds
[tool.scikit-build.cmake.define]
FLASHINFER_CUTLASS_DIR = {env="FLASHINFER_CUTLASS_DIR", default="3rdparty/cutlass"}
FLASHINFER_CUDA_ARCHITECTURES = "80"
TORCH_CUDA_ARCH_LIST = "8.0"
FLASHINFER_BUILD_WHEELS="ON"
FLASHINFER_AOT_TORCH_EXTS_CUDA = {env="FLASHINFER_AOT_TORCH_EXTS_CUDA", default="OFF"}
FLASHINFER_ENABLE_F16="ON"
FLASHINFER_ENABLE_BF16="ON"
FLASHINFER_ENABLE_FP8="ON"
FLASHINFER_ENABLE_FP8_E4M3="ON"
FLASHINFER_ENABLE_FP8_E5M2="ON"

[tool.scikit-build.wheel]
# Set the minimum Python version for ABI compatibility
py-api = "cp39"
abi = "abi3"
platforms = ["manylinux_2_28_x86_64"]

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 80
multi_line_output = 3
skip = ["flashinfer/_version.py"]
use_parentheses = true
